--- a/src/main/resources/configuration/config.properties
+++ b/src/main/resources/configuration/config.properties
@@ -1,6 +1,7 @@
 #key value
 browser = chrome
-url = https://en.wikipedia.org/wiki/Ernst_%26_Young
+#other browsers "firefox" and "edge"
+URL = https://en.wikipedia.org/wiki/Ernst_%26_Young
 spiceURL = https://www.spicejet.com/
 salesforceURL = https://login.salesforce.com/
 amazonURL = https://www.amazon.in/
