--- a/src/main/resources/configuration/config.properties
+++ b/src/main/resources/configuration/config.properties
@@ -5,4 +5,5 @@ URL = https://en.wikipedia.org/wiki/Ernst_%26_Young
 spiceURL = https://www.spicejet.com/
 salesforceURL = https://login.salesforce.com/
 amazonURL = https://www.amazon.in/
-droppableURL = https://jqueryui.com/droppable/
+demoURL = https://jqueryui.com/
+alertURL = https://demo.automationtesting.in/Alerts.html
